Search videos and download converted mp3

--- a/YTDownloader.csproj
+++ b/YTDownloader.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NAudio.Lame" Version="2.1.0" />
+    <PackageReference Include="YoutubeExplode" Version="6.4.3" />
+  </ItemGroup>
+
 </Project>
