--- a/YTDownloader.csproj
+++ b/YTDownloader.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="NAudio.Lame" Version="2.1.0" />
     <PackageReference Include="YoutubeExplode" Version="6.4.3" />
   </ItemGroup>
